--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -19,7 +19,6 @@ jobs:
     name: Test all modes
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -38,6 +37,15 @@ jobs:
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
+
+  deployPages:
+    needs: testRunner
+    name: Deploy to Github Pages
+    runs-on: ubuntu-latest
+    steps:
+     - name: Checkout code
+       uses: actions/checkout@v2
+
       - name: Build project
         uses: game-ci/unity-builder@v2
         env:
@@ -45,32 +53,23 @@ jobs:
         with:
           targetPlatform: WebGL
 
-      # Output
       - uses: actions/upload-artifact@v2
         with:
           name: Build
           path: build
 
-#  deployPages:
-#    needs: buildWebGL
-#    name: Deploy to Github Pages 🚀
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - uses: actions/download-artifact@v2
-#        with:
-#          name: build-WebGL
-#          path: build
-#
-#      - name: Display structure of root files
-#        run: ls -R
-#        working-directory: build/WebGL
-#
-#      - name: Deploy 🚀
-#        uses: JamesIves/github-pages-deploy-action@4.1.4
-#        with:
-#          branch: gh-pages
-#          folder: build/WebGL
+     - uses: actions/download-artifact@v2
+       with:
+         name: build-WebGL
+         path: build
+
+     - name: Display structure of root files
+       run: ls -R
+       working-directory: build/WebGL
+
+     - name: Deploy
+       uses: JamesIves/github-pages-deploy-action@4.1.4
+       with:
+         branch: gh-pages
+         folder: build/WebGL
 
