--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -67,14 +67,14 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: build-WebGL
-          path: build/
+          path: build
 
       - name: Display structure of root files
         run: ls -R
-        working-directory: build/
+        working-directory: build/WebGL
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages
-          folder: build/
+          folder: build/WebGL
