--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -48,6 +48,7 @@ jobs:
       matrix:
         targetPlatform:
           - iOS
+          - Android
           - WebGL
     steps:
       - name: Checkout code
